--- a/manifest-ff.json
+++ b/manifest-ff.json
@@ -8,58 +8,29 @@
   },
   "content_scripts": [
     {
-    "matches": [
-    "*://*.ad.nl/*",
-    "*://*.afr.com/*",
-    "*://*.americanbanker.com/*",
-    "*://*.bizjournals.com/*",
-    "*://*.bloomberg.com/*",
-    "*://*.bloombergquint.com/*",
-    "*://*.businessinsider.com/*",
-    "*://*.caixinglobal.com/*",
-    "*://*.canberratimes.com.au/*",
-    "*://*.economist.com/*",
-    "*://*.ed.nl/*",
-    "*://*.elpais.com/*",
-    "*://*.examiner.com.au/*",
-    "*://*.firstthings.com/*",
-    "*://*.ft.com/*",
-    "*://*.haaretz.co.il/*",
-    "*://*.ledevoir.com/*",
-    "*://*.leparisien.fr/*",
-    "*://*.medium.com/*",
-    "*://*.mexiconewsdaily.com/*",
-    "*://*.nytimes.com/*",
-    "*://*.nzherald.co.nz/*",
-    "*://*.parool.nl/*",
-    "*://*.repubblica.it/*",
-    "*://*.sfchronicle.com/*",
-    "*://*.sloanreview.mit.edu/*",
-    "*://*.techinasia.com/*",
-    "*://*.telegraaf.nl/*",
-    "*://*.the-american-interest.com/*",
-    "*://*.the-tls.co.uk/*",
-    "*://*.theadvocate.com.au/*",
-    "*://*.theathletic.com/*",
-    "*://*.theathletic.co.uk/*",
-    "*://*.thecourier.com.au/*",
-    "*://*.theglobeandmail.com/*",
-    "*://*.thehindu.com/*",
-    "*://*.thestar.com/*",
-    "*://*.thewrap.com/*",
-    "*://*.trouw.nl/*",
-    "*://*.volkskrant.nl/*",
-    "*://*.washingtonpost.com/*",
-    "*://*.wsj.com/*",
-    "*://*.hbr.org/*"
-    ],
-      "js": ["src/js/contentScript.js"]
+      "matches": [
+        "*://*.bloomberg.com/*",
+        "*://*.bloombergquint.com/*",
+        "*://*.businessinsider.com/*",
+        "*://*.economist.com/*",
+        "*://*.ft.com/*",
+        "*://*.medium.com/*",
+        "*://*.nytimes.com/*",
+        "*://*.the-tls.co.uk/*",
+        "*://*.theathletic.co.uk/*",
+        "*://*.washingtonpost.com/*",
+        "*://*.wsj.com/*",
+        "*://*.hbr.org/*"
+      ],
+      "js": [
+        "src/js/contentScript.js"
+      ]
     }
   ],
   "applications": {
     "gecko": {
       "id": "bypasspaywalls@bypasspaywalls.weebly.com",
-      "update_url": "https://raw.githubusercontent.com/iamadamdev/bypass-paywalls-chrome/master/src/updates/updates.json"
+      "update_url": "https://raw.githubusercontent.com/mattleeuk/bypass-paywalls-chrome/master/src/updates/updates.json"
     }
   },
   "browser_action": {
@@ -76,7 +47,7 @@
     }
   },
   "description": "Bypass News Sites' Paywalls",
-  "homepage_url": "https://github.com/iamadamdev/bypass-paywalls-chrome/blob/master/README.md",
+  "homepage_url": "https://github.com/mattleeuk/bypass-paywalls-chrome/blob/master/README.md",
   "icons": {
     "128": "src/icon/bypass.png"
   },
@@ -92,135 +63,30 @@
     "tabs",
     "webRequest",
     "webRequestBlocking",
-    "*://*.outbrain.com/*",
-    "*://*.piano.io/*",
-    "*://*.poool.fr/*",
-    "*://*.tinypass.com/*",
-    "*://*.ad.nl/*",
-    "*://*.adelaidenow.com.au/*",
-    "*://*.adweek.com/*",
-    "*://*.afr.com/*",
-    "*://*.asia.nikkei.com/*",
-    "*://*.baltimoresun.com/*",
-    "*://*.barrons.com/*",
-    "*://*.bizjournals.com/*",
     "*://*.bloomberg.com/*",
     "*://*.bloombergquint.com/*",
-    "*://*.bostonglobe.com/*",
     "*://*.britannica.com/*",
     "*://*.businessinsider.com/*",
-    "*://*.caixinglobal.com/*",
-    "*://*.cen.acs.org/*",
-    "*://*.centralwesterndaily.com.au/*",
-    "*://*.chicagobusiness.com/*",
-    "*://*.chicagotribune.com/*",
-    "*://*.corriere.it/*",
-    "*://*.courant.com/*",
-    "*://*.couriermail.com.au/*",
-    "*://*.dailypress.com/*",
-    "*://*.dailytelegraph.com.au/*",
-    "*://*.demorgen.be/*",
-    "*://*.denverpost.com/*",
-    "*://*.dynamed.com/*",
     "*://*.economist.com/*",
-    "*://*.ed.nl/*",
-    "*://*.examiner.com.au/*",
-    "*://*.fd.nl/*",
-    "*://*.fnlondon.com/*",
     "*://*.foreignpolicy.com/*",
     "*://*.fortune.com/*",
     "*://*.ft.com/*",
-    "*://*.genomeweb.com/*",
     "*://*.glassdoor.com/*",
-    "*://*.groene.nl/*",
-    "*://*.haaretz.co.il/*",
-    "*://*.haaretz.com/*",
-    "*://*.handelsblatt.com/*",
     "*://*.harpers.org/*",
     "*://*.hbr.org/*",
-    "*://*.heraldsun.com.au/*",
-    "*://*.ilmanifesto.it/*",
-    "*://*.inc.com/*",
-    "*://*.inquirer.com/*",
-    "*://*.investorschronicle.co.uk/*",
-    "*://*.irishtimes.com/*",
-    "*://*.japantimes.co.jp/*",
-    "*://*.journalnow.com/*",
-    "*://*.kansascity.com/*",
-    "*://*.labusinessjournal.com/*",
-    "*://*.lanacion.com.ar/*",
-    "*://*.lastampa.it/*",
-    "*://*.latercera.com/*",
-    "*://*.latimes.com/*",
-    "*://*.lecho.be/*",
-    "*://*.leparisien.fr/*",
-    "*://*.lesechos.fr/*",
     "*://*.loebclassics.com/*",
-    "*://*.lrb.co.uk/*",
-    "*://*.mcall.com/*",
     "*://*.medium.com/*",
-    "*://*.medscape.com/*",
-    "*://*.mercurynews.com/*",
-    "*://*.mv-voice.com/*",
-    "*://*.nationalpost.com/*",
-    "*://*.news-gazette.com/*",
-    "*://*.newstatesman.com/*",
     "*://*.newyorker.com/*",
-    "*://*.nrc.nl/*",
-    "*://*.ntnews.com.au/*",
-    "*://*.nymag.com/*",
     "*://*.nytimes.com/*",
-    "*://*.nzherald.co.nz/*",
-    "*://*.ocregister.com/*",
-    "*://*.orlandosentinel.com/*",
-    "*://*.paloaltoonline.com/*",
-    "*://*.parool.nl/*",
-    "*://*.quora.com/*",
-    "*://*.qz.com/*",
-    "*://*.repubblica.it/*",
-    "*://*.sandiegouniontribune.com/*",
-    "*://*.scientificamerican.com/*",
-    "*://*.seattletimes.com/*",
-    "*://*.seekingalpha.com/*",
-    "*://*.smh.com.au/*",
-    "*://*.sofrep.com/*",
     "*://*.spectator.co.uk/*",
-    "*://*.spectator.com.au/*",
-    "*://*.statista.com/*",
-    "*://*.sun-sentinel.com/*",
-    "*://*.techinasia.com/*",
-    "*://*.technologyreview.com/*",
-    "*://*.telegraaf.nl/*",
     "*://*.telegraph.co.uk/*",
     "*://*.the-tls.co.uk/*",
-    "*://*.theadvocate.com.au/*",
-    "*://*.theage.com.au/*",
-    "*://*.theathletic.com/*",
     "*://*.theathletic.co.uk/*",
     "*://*.theatlantic.com/*",
-    "*://*.theaustralian.com.au/*",
-    "*://*.thediplomat.com/*",
-    "*://*.theglobeandmail.com/*",
-    "*://*.theherald.com.au/*",
-    "*://*.thehindu.com/*",
-    "*://*.themarker.com/*",
-    "*://*.themercury.com.au/*",
-    "*://*.thenation.com/*",
-    "*://*.thesaturdaypaper.com.au/*",
-    "*://*.thestar.com/*",
     "*://*.thetimes.co.uk/*",
-    "*://*.thewrap.com/*",
-    "*://*.tijd.be/*",
-    "*://*.towardsdatascience.com/*",
-    "*://*.trouw.nl/*",
     "*://*.vanityfair.com/*",
-    "*://*.vn.nl/*",
-    "*://*.volkskrant.nl/*",
     "*://*.washingtonpost.com/*",
-    "*://*.wired.com/*",
-    "*://*.worldpoliticsreview.com/*",
-    "*://*.wsj.com/*",
-    "*://*.nzz.ch/*"
+    "*://*.wsj.com/*"
   ],
   "version": "1.7.2"
 }
